fix: txt & select alignment

--- a/src/base/_globals.scss
+++ b/src/base/_globals.scss
@@ -151,10 +151,15 @@ iframe {
 
 a,
 button,
+label {
+	text-align: center;
+}
+
+a,
+button,
 label,
 select {
 	white-space: nowrap;
-	text-align: center;
 	&,
 	* {
 		vertical-align: middle;
